compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt49661.diag.txt
/kt49661.kt:10:5: error: type argument for a type parameter T can't be inferred because it has incompatible upper bounds: Foo, Int (multiple incompatible classes)
    f<Int> { g() }
    ^

